[package]
name = "libbess"
version = "0.0.1"
authors = ["Melvin Walls <mwalls67@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
tonic = "0.3.0"
prost = "0.6.1"
prost-types = "0.6.1"
tokio = {version="0.2.22",features = ["stream", "macros"]}
futures = "0.3"

[build-dependencies]
tonic-build = "0.3.0"
prost-build = "0.6.1"
