[package]
name = "libbess"
version = "0.0.1"
authors = ["Melvin Walls <mwalls67@gmail.com>"]
build = "build.rs"
edition = "2018"

[features]
default = ["with-serde"]
with-serde = ["protobuf/with-serde"]

[dependencies]
grpc            = "~0.8"
grpc-protobuf   = "~0.8"
protobuf        = { version = "~2", features = ["with-bytes", "with-serde"] }
futures         = "~0.3"
serde           = { version = "1.0.114", features = ["derive"] }
serde_json      = "1.0.56"

[build-dependencies]
protoc-rust      = "2.0"
protoc-rust-grpc = "~0.8"
