[package]
name = "bessagent"
version = "0.0.0"
authors = ["Melvin Walls <mwalls67@gmail.com>"]
edition = "2018"

[dependencies]
libbess         = { path = "../libbess" }
grpc            = "~0.8"
grpc-protobuf   = "~0.8"
protobuf        = { version = "2.3.0", features = ["with-bytes", "with-serde"] }
futures         = "~0.3"
serde           = { version = "1.0.114", features = ["derive"] }
serde_json      = "1.0.56"
serde-protobuf  = { path = "/home/melvin/workdir/serde-protobuf" }

[build-dependencies]
protoc-rust      = "2.0"
protoc-rust-grpc = "~0.8"
