[package]
name = "besstools"
version = "0.0.0"
authors = ["Melvin Walls <mwalls67@gmail.com>"]
edition = "2018"

[dependencies]
libbess = { path = "../libbess" }
base64 = "0.12.3"
clap = "3.0.0-beta.1"
failure = "0.1.8"
glob = "0.3.0"
grpc = "~0.8"
grpc-protobuf = "~0.8"
protobuf = { version = "2.3.0", features = ["with-bytes", "with-serde"] }
futures = "~0.3"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
serde-protobuf = { git = "https://github.com/melvinw/serde-protobuf" }

[build-dependencies]
protoc-rust = "2.0"
protoc-rust-grpc = "~0.8"
